--- a/CMDB/ops/config.ini
+++ b/CMDB/ops/config.ini
@@ -4,12 +4,12 @@ host = localhost
 port = 3306
 user = root
 pass =
-[svn_master]
-url = http://10.188.1.70:8010/svn/EwinProject/EWP_OMS/SalltMater
-username = ewin\ewp_oms
-password = ewp_oms
-path = ../media/SaltMaster
-[zabbix_server]
+[salt]
+salt_url = https://10.1.10.176:8000/
+salt_user = admin
+salt_passwd = admin123
+
+path = ../media/SaltMaster[zabbix_server]
 url = http://xxxxx/zabbix/api_jsonrpc.php
 graphurl = http://xxxxx/zabbix/chart2.php
 itemurl = http://xxxxxx/zabbix/chart.php
