--- a/CMDB/ops/config.ini
+++ b/CMDB/ops/config.ini
@@ -9,7 +9,8 @@ salt_url = https://10.1.10.176:8000/
 salt_user = admin
 salt_passwd = admin123
 
-path = ../media/SaltMaster[zabbix_server]
+
+[zabbix_server]
 url = http://xxxxx/zabbix/api_jsonrpc.php
 graphurl = http://xxxxx/zabbix/chart2.php
 itemurl = http://xxxxxx/zabbix/chart.php
